# ECE547-Steganography

./: .gitignore  README.md  pyproject.toml
assets/: data_3k.txt  data_500B.txt  logging_formatter.py
scripts/: generate_data.py
src/steganalysis/: __init__.py  __main__.py  analyze.py  utils.py
src/stegosaurus/: __init__.py  __main__.py  data.rtf  data.txt  keygen.py  stegosaurus.py  utils.py
